// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyCanvas > should render empty state when there are no routes 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item pf-m-fill pf-topology-container"
    >
      <div
        class="pf-topology-content"
      >
        <div
          class="pf-v6-l-bullseye canvas-empty-state"
        >
          <div
            class="pf-v6-c-card"
            data-ouia-component-id="OUIA-Generated-Card-_r_0_"
            data-ouia-component-type="PF6/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-v6-c-empty-state"
              data-testid="visualization-empty-state"
            >
              <div
                class="pf-v6-c-empty-state__content"
              >
                <div
                  class="pf-v6-c-empty-state__header"
                >
                  <div
                    class="pf-v6-c-empty-state__icon"
                  >
                    <svg
                      aria-hidden="true"
                      data-testid="cubes-icon"
                      role="img"
                    >
                      <path />
                    </svg>
                  </div>
                  <div
                    class="pf-v6-c-empty-state__title"
                  >
                    <h4
                      class="pf-v6-c-empty-state__title-text"
                    >
                      <p>
                        There are no routes defined
                      </p>
                    </h4>
                  </div>
                </div>
                <div
                  class="pf-v6-c-empty-state__body"
                >
                  <p>
                    You can create a new route using the New button
                  </p>
                </div>
                <div
                  class="pf-v6-c-empty-state__footer"
                >
                  <div
                    class="pf-v6-c-empty-state__actions"
                  >
                    <div
                      class="pf-v6-c-menu-toggle pf-m-full-width pf-m-split-button"
                    >
                      <button
                        aria-label="DSL list"
                        class="pf-v6-c-menu-toggle__button"
                        data-testid="dsl-list-btn"
                        id="dsl-list-btn"
                        type="button"
                      >
                        <div
                          title="Add a new Camel Route YAML route"
                        >
                          <svg
                            data-testid="plus-icon"
                            role="img"
                          >
                            <path />
                          </svg>
                          <span
                            class="pf-v6-u-m-sm"
                          >
                            New
                          </span>
                        </div>
                      </button>
                      <button
                        aria-expanded="false"
                        class="pf-v6-c-menu-toggle__button"
                        data-ouia-component-id="OUIA-Generated-MenuToggle-_r_3_"
                        data-ouia-component-type="PF6/MenuToggle"
                        data-ouia-safe="true"
                        data-testid="viz-dsl-list-dropdown"
                        type="button"
                      >
                        <span
                          class="pf-v6-c-menu-toggle__controls"
                        >
                          <span
                            class="pf-v6-c-menu-toggle__toggle-icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v6-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 20 20"
                              width="1em"
                            >
                              <path
                                d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
                              />
                            </svg>
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyCanvas > should render empty state when there are routes but none are visible 1`] = `
<div>
  <div
    class="pf-v6-l-stack"
  >
    <div
      class="pf-v6-l-stack__item pf-m-fill pf-topology-container"
    >
      <div
        class="pf-topology-content"
      >
        <div
          class="pf-v6-l-bullseye canvas-empty-state"
        >
          <div
            class="pf-v6-c-card"
            data-ouia-component-id="OUIA-Generated-Card-_r_4_"
            data-ouia-component-type="PF6/Card"
            data-ouia-safe="true"
            id=""
          >
            <div
              class="pf-v6-c-empty-state"
              data-testid="visualization-empty-state"
            >
              <div
                class="pf-v6-c-empty-state__content"
              >
                <div
                  class="pf-v6-c-empty-state__header"
                >
                  <div
                    class="pf-v6-c-empty-state__icon"
                  >
                    <svg
                      aria-hidden="true"
                      data-testid="eye-slash-icon"
                      role="img"
                    >
                      <path />
                    </svg>
                  </div>
                  <div
                    class="pf-v6-c-empty-state__title"
                  >
                    <h4
                      class="pf-v6-c-empty-state__title-text"
                    >
                      <p>
                        There are no visible routes
                      </p>
                    </h4>
                  </div>
                </div>
                <div
                  class="pf-v6-c-empty-state__body"
                >
                  <button
                    class="pf-v6-c-button pf-m-control"
                    data-ouia-component-id="OUIA-Generated-Button-control-_r_5_"
                    data-ouia-component-type="PF6/Button"
                    data-ouia-safe="true"
                    data-testid="show-all-routes-button"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__icon pf-m-start"
                    >
                      <svg
                        data-testid="eye-icon"
                        role="img"
                      >
                        <path />
                      </svg>
                    </span>
                    <span
                      class="pf-v6-c-button__text"
                    >
                      <span
                        class="pf-v6-u-m-sm"
                      >
                        Show all routes
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="pf-v6-c-empty-state__footer"
                >
                  <div
                    class="pf-v6-c-empty-state__actions"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
